# local-computer

./: .gitignore  LocalComputer.py  README.md  install_dock_app.sh  open_dashboard.sh  pyproject.toml  requirements.txt  run.sh  run_app.sh  run_dashboard.sh  start.sh
configs/: models.json  runtime.json
dashboard/: index.html
examples/: auto_mission.json
legacy/: .gitkeep
memory/: agent_memory.txt
prompts/: browser_steps.txt  browser_steps_prose.txt
scripts/: __init__.py  agent_memory.py  agent_roles.py  ai_chatbot_subagent.py  candidate_policy.py  claim_cluster.py  claim_extractor.py  cloud_dispatcher.py  critic_agent.py  event_logger.py  executor.py  localhost_server.py  long_term_memory.py  memory.py  navigation_agent.py  observer.py  ollama_client.py  ollama_hybrid.py  orchestrator.py  page_skills.py  plan_browser.py  plan_prose.py  query_rewriter.py  router.py  search_api.py  search_controller.py  source_scoring.py  subagents.py  sys_limits.py  tab_manager.py  task_planner.py  task_schema.py  ui_server.py
