[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "local-computer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.43.0",
    "httpx==0.27.0",
    "psutil==5.9.8",
    "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
